[package]
name = "h264_webcam_stream"
version = "0.1.0"
edition = "2021"
description = "Capture h264 video from v4l2 cameras in Linux"
repository = "https://github.com/D1plo1d/h264_webcam_stream"
license = "MIT OR Apache-2.0"

[dependencies]
jpeg-decoder = "0.3.0"
openh264 = { version = "0.3.0", default-features = false, features = ["encoder", "decoder"] }
v4l = { git = "https://github.com/raymanfx/libv4l-rs.git", branch="next"}
tracing = "0.1.37"
thiserror = "1.0.37"
