[package]
name = "h264_webcam_stream"
version = "0.1.0"
edition = "2021"
description = "Capture h264 video from v4l2 cameras in Linux"
repository = "https://github.com/D1plo1d/h264_webcam_stream"
license = "MIT OR Apache-2.0"

[dependencies]
jpeg-decoder = "0.3.0"
openh264 = { version = "0.3.0", default-features = false, features = ["encoder", "decoder"] }
v4l = "0.13.1"
tracing = "0.1.37"
thiserror = "1.0.37"

[dev-dependencies]
chrono = "0.4.23"
eyre = "0.6.8"
